commit bilingual contents

--- a/aspnetcore/whats-new/2020-10.md
+++ b/aspnetcore/whats-new/2020-10.md
@@ -2,115 +2,115 @@
 title: 'ASP.net Core docs: Neuerungen beim 1. Oktober 2020 bis zum 31. Oktober 2020'
 description: Neuerungen in den ASP.net Core docs für den 1. Oktober 2020 bis zum 31. Oktober 2020.
 ms.date: 11/02/2020
-ms.openlocfilehash: f7fc2c75db86aa1076fb826fefd40b27aa810ce0
-ms.sourcegitcommit: d64bf0cbe763beda22a7728c7f10d07fc5e19262
+ms.openlocfilehash: 293559d7f9ed305a7a64c0d438261967b273fb84
+ms.sourcegitcommit: 20a41c8e40a2e69e99291e2fe18caa04c02e7109
 ms.translationtype: MT
 ms.contentlocale: de-DE
-ms.lasthandoff: 11/03/2020
-ms.locfileid: "93239384"
+ms.lasthandoff: 02/05/2021
+ms.locfileid: "99578385"
 ---
-# <a name="aspnet-core-docs-whats-new-for-october-1-2020---october-31-2020"></a><span data-ttu-id="c4fb4-103">ASP.net Core docs: Neuerungen beim 1. Oktober 2020 bis zum 31. Oktober 2020</span><span class="sxs-lookup"><span data-stu-id="c4fb4-103">ASP.NET Core docs: What's new for October 1, 2020 - October 31, 2020</span></span>
+# <a name="aspnet-core-docs-whats-new-for-october-1-2020---october-31-2020"></a><span data-ttu-id="d91fb-103">ASP.net Core docs: Neuerungen beim 1. Oktober 2020 bis zum 31. Oktober 2020</span><span class="sxs-lookup"><span data-stu-id="d91fb-103">ASP.NET Core docs: What's new for October 1, 2020 - October 31, 2020</span></span>
 
-<span data-ttu-id="c4fb4-104">Willkommen bei den Neuerungen in den ASP.net Core docs vom 1. Oktober 2020 bis zum 31. Oktober 2020.</span><span class="sxs-lookup"><span data-stu-id="c4fb4-104">Welcome to what's new in the ASP.NET Core docs from October 1, 2020 through October 31, 2020.</span></span> <span data-ttu-id="c4fb4-105">Nachfolgend sind alle größeren Änderungen aufgelistet, die in diesem Zeitraum an der Dokumentation vorgenommen wurden.</span><span class="sxs-lookup"><span data-stu-id="c4fb4-105">This article lists some of the major changes to docs during this period.</span></span>
+<span data-ttu-id="d91fb-104">Willkommen bei den Neuerungen in den ASP.net Core docs vom 1. Oktober 2020 bis zum 31. Oktober 2020.</span><span class="sxs-lookup"><span data-stu-id="d91fb-104">Welcome to what's new in the ASP.NET Core docs from October 1, 2020 through October 31, 2020.</span></span> <span data-ttu-id="d91fb-105">Nachfolgend sind alle größeren Änderungen aufgelistet, die in diesem Zeitraum an der Dokumentation vorgenommen wurden.</span><span class="sxs-lookup"><span data-stu-id="d91fb-105">This article lists some of the major changes to docs during this period.</span></span>
 
-## <a name="blazor"></a><span data-ttu-id="c4fb4-106">Blazor</span><span class="sxs-lookup"><span data-stu-id="c4fb4-106">Blazor</span></span>
+## <a name="blazor"></a><span data-ttu-id="d91fb-106">Blazor</span><span class="sxs-lookup"><span data-stu-id="d91fb-106">Blazor</span></span>
 
-### <a name="new-articles"></a><span data-ttu-id="c4fb4-107">Neue Artikel</span><span class="sxs-lookup"><span data-stu-id="c4fb4-107">New articles</span></span>
+### <a name="new-articles"></a><span data-ttu-id="d91fb-107">Neue Artikel</span><span class="sxs-lookup"><span data-stu-id="d91fb-107">New articles</span></span>
 
-- <span data-ttu-id="c4fb4-108"><xref:blazor/security/webassembly/graph-api> -Verschieben der blazor-Webassembly mit Graph-API Inhalt in ein neues Dokument</span><span class="sxs-lookup"><span data-stu-id="c4fb4-108"><xref:blazor/security/webassembly/graph-api> - Move the Blazor WebAssembly with Graph API content to a new doc</span></span>
-- <span data-ttu-id="c4fb4-109"><xref:blazor/components/css-isolation> : Neuer Artikel für die blazor-CSS-Isolation</span><span class="sxs-lookup"><span data-stu-id="c4fb4-109"><xref:blazor/components/css-isolation> - New article for Blazor CSS isolation</span></span>
+- <span data-ttu-id="d91fb-108"><xref:blazor/security/webassembly/graph-api> -Verschieben der blazor-Webassembly mit Graph-API Inhalt in ein neues Dokument</span><span class="sxs-lookup"><span data-stu-id="d91fb-108"><xref:blazor/security/webassembly/graph-api> - Move the Blazor WebAssembly with Graph API content to a new doc</span></span>
+- <span data-ttu-id="d91fb-109"><xref:blazor/components/css-isolation> : Neuer Artikel für die blazor-CSS-Isolation</span><span class="sxs-lookup"><span data-stu-id="d91fb-109"><xref:blazor/components/css-isolation> - New article for Blazor CSS isolation</span></span>
 
-### <a name="updated-articles"></a><span data-ttu-id="c4fb4-110">Aktualisierte Artikel</span><span class="sxs-lookup"><span data-stu-id="c4fb4-110">Updated articles</span></span>
+### <a name="updated-articles"></a><span data-ttu-id="d91fb-110">Aktualisierte Artikel</span><span class="sxs-lookup"><span data-stu-id="d91fb-110">Updated articles</span></span>
 
 - <xref:blazor/security/webassembly/aad-groups-roles>
-  - <span data-ttu-id="c4fb4-111">Verschieben der blazor-Webassembly mit Graph-API Inhalt in ein neues Dokument</span><span class="sxs-lookup"><span data-stu-id="c4fb4-111">Move the Blazor WebAssembly with Graph API content to a new doc</span></span>
-  - <span data-ttu-id="c4fb4-112">Abschnitt hinzufügen für die *App* -API-Autorisierung der blazor Server-App für Azure Active Directory Gruppen</span><span class="sxs-lookup"><span data-stu-id="c4fb4-112">Add section for Blazor *Server app* API authorization for Azure Active Directory groups and roles</span></span>
-- <span data-ttu-id="c4fb4-113"><xref:blazor/blazor-server-ef-core> -Details zur Verwendung des blazor-Servers mit einer EF Core Factory und Identität hinzufügen</span><span class="sxs-lookup"><span data-stu-id="c4fb4-113"><xref:blazor/blazor-server-ef-core> - Add details on using Blazor Server with an EF Core factory and Identity</span></span>
-- <span data-ttu-id="c4fb4-114"><xref:blazor/security/webassembly/hosted-with-azure-active-directory> -Blazor WASM Sicherheitsupdates für 5,0</span><span class="sxs-lookup"><span data-stu-id="c4fb4-114"><xref:blazor/security/webassembly/hosted-with-azure-active-directory> - Blazor WASM security updates for 5.0</span></span>
-- <span data-ttu-id="c4fb4-115"><xref:blazor/host-and-deploy/webassembly> -Informationen zur Integritäts Überprüfung hinzufügen</span><span class="sxs-lookup"><span data-stu-id="c4fb4-115"><xref:blazor/host-and-deploy/webassembly> - Add info about integrity checking</span></span>
-- <span data-ttu-id="c4fb4-116"><xref:blazor/security/server/additional-scenarios> -Blazor Server Authentifizierung Topic Updates für 5,0</span><span class="sxs-lookup"><span data-stu-id="c4fb4-116"><xref:blazor/security/server/additional-scenarios> - Blazor Server auth topic updates for 5.0</span></span>
-- <span data-ttu-id="c4fb4-117"><xref:blazor/call-javascript-from-dotnet> -Hinzufügen von Dokumenten zur Verwendung von JavaScript-Bibliotheken, die Benutzeroberfläche</span><span class="sxs-lookup"><span data-stu-id="c4fb4-117"><xref:blazor/call-javascript-from-dotnet> - Add docs about using JavaScript libraries that render UI</span></span>
-- <span data-ttu-id="c4fb4-118"><xref:blazor/components/virtualization> -Beispiel für Virtualisierungskomponente hinzufügen zu blazor doc</span><span class="sxs-lookup"><span data-stu-id="c4fb4-118"><xref:blazor/components/virtualization> - Add Virtualize component example to Blazor doc</span></span>
-- <span data-ttu-id="c4fb4-119"><xref:blazor/webassembly-performance-best-practices> -Dokumentation zu blazor-webassemblyperf erweitern</span><span class="sxs-lookup"><span data-stu-id="c4fb4-119"><xref:blazor/webassembly-performance-best-practices> - Extend docs about Blazor WebAssembly perf</span></span>
-- <span data-ttu-id="c4fb4-120"><xref:blazor/security/webassembly/hosted-with-identity-server> -Hinzufügen eines Abschnitts zum Hosting von blazor WASM mit Identity Server in Azure App Service mit einer benutzerdefinierten Domäne</span><span class="sxs-lookup"><span data-stu-id="c4fb4-120"><xref:blazor/security/webassembly/hosted-with-identity-server> - Add section for hosting Blazor WASM with Identity Server in Azure App Service with a custom domain</span></span>
+  - <span data-ttu-id="d91fb-111">Verschieben der blazor-Webassembly mit Graph-API Inhalt in ein neues Dokument</span><span class="sxs-lookup"><span data-stu-id="d91fb-111">Move the Blazor WebAssembly with Graph API content to a new doc</span></span>
+  - <span data-ttu-id="d91fb-112">Abschnitt hinzufügen für die *App* -API-Autorisierung der blazor Server-App für Azure Active Directory Gruppen</span><span class="sxs-lookup"><span data-stu-id="d91fb-112">Add section for Blazor *Server app* API authorization for Azure Active Directory groups and roles</span></span>
+- <span data-ttu-id="d91fb-113"><xref:blazor/blazor-server-ef-core> -Details zur Verwendung des blazor-Servers mit einer EF Core Factory und Identität hinzufügen</span><span class="sxs-lookup"><span data-stu-id="d91fb-113"><xref:blazor/blazor-server-ef-core> - Add details on using Blazor Server with an EF Core factory and Identity</span></span>
+- <span data-ttu-id="d91fb-114"><xref:blazor/security/webassembly/hosted-with-azure-active-directory> -Blazor WASM Sicherheitsupdates für 5,0</span><span class="sxs-lookup"><span data-stu-id="d91fb-114"><xref:blazor/security/webassembly/hosted-with-azure-active-directory> - Blazor WASM security updates for 5.0</span></span>
+- <span data-ttu-id="d91fb-115"><xref:blazor/host-and-deploy/webassembly> -Informationen zur Integritäts Überprüfung hinzufügen</span><span class="sxs-lookup"><span data-stu-id="d91fb-115"><xref:blazor/host-and-deploy/webassembly> - Add info about integrity checking</span></span>
+- <span data-ttu-id="d91fb-116"><xref:blazor/security/server/additional-scenarios> -Blazor Server Authentifizierung Topic Updates für 5,0</span><span class="sxs-lookup"><span data-stu-id="d91fb-116"><xref:blazor/security/server/additional-scenarios> - Blazor Server auth topic updates for 5.0</span></span>
+- <span data-ttu-id="d91fb-117"><xref:blazor/call-javascript-from-dotnet> -Hinzufügen von Dokumenten zur Verwendung von JavaScript-Bibliotheken, die Benutzeroberfläche</span><span class="sxs-lookup"><span data-stu-id="d91fb-117"><xref:blazor/call-javascript-from-dotnet> - Add docs about using JavaScript libraries that render UI</span></span>
+- <span data-ttu-id="d91fb-118"><xref:blazor/components/virtualization> -Beispiel für Virtualisierungskomponente hinzufügen zu blazor doc</span><span class="sxs-lookup"><span data-stu-id="d91fb-118"><xref:blazor/components/virtualization> - Add Virtualize component example to Blazor doc</span></span>
+- <span data-ttu-id="d91fb-119"><xref:blazor/webassembly-performance-best-practices> -Dokumentation zu blazor-webassemblyperf erweitern</span><span class="sxs-lookup"><span data-stu-id="d91fb-119"><xref:blazor/webassembly-performance-best-practices> - Extend docs about Blazor WebAssembly perf</span></span>
+- <span data-ttu-id="d91fb-120"><xref:blazor/security/webassembly/hosted-with-identity-server> -Hinzufügen eines Abschnitts zum Hosting von blazor WASM mit Identity Server in Azure App Service mit einer benutzerdefinierten Domäne</span><span class="sxs-lookup"><span data-stu-id="d91fb-120"><xref:blazor/security/webassembly/hosted-with-identity-server> - Add section for hosting Blazor WASM with Identity Server in Azure App Service with a custom domain</span></span>
 
-## <a name="fundamentals"></a><span data-ttu-id="c4fb4-121">Grundlagen</span><span class="sxs-lookup"><span data-stu-id="c4fb4-121">Fundamentals</span></span>
+## <a name="fundamentals"></a><span data-ttu-id="d91fb-121">Grundlagen</span><span class="sxs-lookup"><span data-stu-id="d91fb-121">Fundamentals</span></span>
 
-### <a name="updated-articles"></a><span data-ttu-id="c4fb4-122">Aktualisierte Artikel</span><span class="sxs-lookup"><span data-stu-id="c4fb4-122">Updated articles</span></span>
+### <a name="updated-articles"></a><span data-ttu-id="d91fb-122">Aktualisierte Artikel</span><span class="sxs-lookup"><span data-stu-id="d91fb-122">Updated articles</span></span>
 
-- <span data-ttu-id="c4fb4-123"><xref:fundamentals/dependency-injection> -Weitere `IEnumerable<TService>` Dienst Registrierungsdetails hinzufügen</span><span class="sxs-lookup"><span data-stu-id="c4fb4-123"><xref:fundamentals/dependency-injection> - Add more `IEnumerable<TService>` service registration details</span></span>
-- <span data-ttu-id="c4fb4-124"><xref:fundamentals/request-features> -Aktualisieren Sie das Dokument mit den HTTP-Anforderungs Features für ASP.net Core 5,0.</span><span class="sxs-lookup"><span data-stu-id="c4fb4-124"><xref:fundamentals/request-features> - Update the HTTP request features doc for ASP.NET Core 5.0</span></span>
+- <span data-ttu-id="d91fb-123"><xref:fundamentals/dependency-injection> -Weitere `IEnumerable<TService>` Dienst Registrierungsdetails hinzufügen</span><span class="sxs-lookup"><span data-stu-id="d91fb-123"><xref:fundamentals/dependency-injection> - Add more `IEnumerable<TService>` service registration details</span></span>
+- <span data-ttu-id="d91fb-124"><xref:fundamentals/request-features> -Aktualisieren Sie das Dokument mit den HTTP-Anforderungs Features für ASP.net Core 5,0.</span><span class="sxs-lookup"><span data-stu-id="d91fb-124"><xref:fundamentals/request-features> - Update the HTTP request features doc for ASP.NET Core 5.0</span></span>
 
-## <a name="hosting-and-deployment"></a><span data-ttu-id="c4fb4-125">Hosten und Bereitstellen</span><span class="sxs-lookup"><span data-stu-id="c4fb4-125">Hosting and deployment</span></span>
+## <a name="hosting-and-deployment"></a><span data-ttu-id="d91fb-125">Hosten und Bereitstellen</span><span class="sxs-lookup"><span data-stu-id="d91fb-125">Hosting and deployment</span></span>
 
-### <a name="new-articles"></a><span data-ttu-id="c4fb4-126">Neue Artikel</span><span class="sxs-lookup"><span data-stu-id="c4fb4-126">New articles</span></span>
+### <a name="new-articles"></a><span data-ttu-id="d91fb-126">Neue Artikel</span><span class="sxs-lookup"><span data-stu-id="d91fb-126">New articles</span></span>
 
-- <span data-ttu-id="c4fb4-127"><xref:host-and-deploy/iis/protocols> -Server-Reset/Trailers-Dokumentation</span><span class="sxs-lookup"><span data-stu-id="c4fb4-127"><xref:host-and-deploy/iis/protocols> - Server Reset/Trailers docs</span></span>
-- <span data-ttu-id="c4fb4-128"><xref:host-and-deploy/iis/app-offline> -Umstrukturierung für IIS-Dokumente</span><span class="sxs-lookup"><span data-stu-id="c4fb4-128"><xref:host-and-deploy/iis/app-offline> - Restructure for IIS docs</span></span>
-- <span data-ttu-id="c4fb4-129"><xref:host-and-deploy/iis/advanced> -Umstrukturierung für IIS-Dokumente</span><span class="sxs-lookup"><span data-stu-id="c4fb4-129"><xref:host-and-deploy/iis/advanced> - Restructure for IIS docs</span></span>
-- <span data-ttu-id="c4fb4-130"><xref:host-and-deploy/iis/hosting-bundle> -Umstrukturierung für IIS-Dokumente</span><span class="sxs-lookup"><span data-stu-id="c4fb4-130"><xref:host-and-deploy/iis/hosting-bundle> - Restructure for IIS docs</span></span>
-- <span data-ttu-id="c4fb4-131"><xref:host-and-deploy/iis/in-process-hosting> -Umstrukturierung für IIS-Dokumente</span><span class="sxs-lookup"><span data-stu-id="c4fb4-131"><xref:host-and-deploy/iis/in-process-hosting> - Restructure for IIS docs</span></span>
-- <span data-ttu-id="c4fb4-132"><xref:host-and-deploy/iis/logging-and-diagnostics> -Umstrukturierung für IIS-Dokumente</span><span class="sxs-lookup"><span data-stu-id="c4fb4-132"><xref:host-and-deploy/iis/logging-and-diagnostics> - Restructure for IIS docs</span></span>
-- <span data-ttu-id="c4fb4-133"><xref:host-and-deploy/iis/out-of-process-hosting> -Umstrukturierung für IIS-Dokumente</span><span class="sxs-lookup"><span data-stu-id="c4fb4-133"><xref:host-and-deploy/iis/out-of-process-hosting> - Restructure for IIS docs</span></span>
-- <span data-ttu-id="c4fb4-134"><xref:host-and-deploy/iis/web-config> -Umstrukturierung für IIS-Dokumente</span><span class="sxs-lookup"><span data-stu-id="c4fb4-134"><xref:host-and-deploy/iis/web-config> - Restructure for IIS docs</span></span>
+- <span data-ttu-id="d91fb-127"><xref:host-and-deploy/iis/protocols> -Server-Reset/Trailers-Dokumentation</span><span class="sxs-lookup"><span data-stu-id="d91fb-127"><xref:host-and-deploy/iis/protocols> - Server Reset/Trailers docs</span></span>
+- <span data-ttu-id="d91fb-128"><xref:host-and-deploy/iis/app-offline> -Umstrukturierung für IIS-Dokumente</span><span class="sxs-lookup"><span data-stu-id="d91fb-128"><xref:host-and-deploy/iis/app-offline> - Restructure for IIS docs</span></span>
+- <span data-ttu-id="d91fb-129"><xref:host-and-deploy/iis/advanced> -Umstrukturierung für IIS-Dokumente</span><span class="sxs-lookup"><span data-stu-id="d91fb-129"><xref:host-and-deploy/iis/advanced> - Restructure for IIS docs</span></span>
+- <span data-ttu-id="d91fb-130"><xref:host-and-deploy/iis/hosting-bundle> -Umstrukturierung für IIS-Dokumente</span><span class="sxs-lookup"><span data-stu-id="d91fb-130"><xref:host-and-deploy/iis/hosting-bundle> - Restructure for IIS docs</span></span>
+- <span data-ttu-id="d91fb-131"><xref:host-and-deploy/iis/in-process-hosting> -Umstrukturierung für IIS-Dokumente</span><span class="sxs-lookup"><span data-stu-id="d91fb-131"><xref:host-and-deploy/iis/in-process-hosting> - Restructure for IIS docs</span></span>
+- <span data-ttu-id="d91fb-132"><xref:host-and-deploy/iis/logging-and-diagnostics> -Umstrukturierung für IIS-Dokumente</span><span class="sxs-lookup"><span data-stu-id="d91fb-132"><xref:host-and-deploy/iis/logging-and-diagnostics> - Restructure for IIS docs</span></span>
+- <span data-ttu-id="d91fb-133"><xref:host-and-deploy/iis/out-of-process-hosting> -Umstrukturierung für IIS-Dokumente</span><span class="sxs-lookup"><span data-stu-id="d91fb-133"><xref:host-and-deploy/iis/out-of-process-hosting> - Restructure for IIS docs</span></span>
+- <span data-ttu-id="d91fb-134"><xref:host-and-deploy/iis/web-config> -Umstrukturierung für IIS-Dokumente</span><span class="sxs-lookup"><span data-stu-id="d91fb-134"><xref:host-and-deploy/iis/web-config> - Restructure for IIS docs</span></span>
 
-### <a name="updated-articles"></a><span data-ttu-id="c4fb4-135">Aktualisierte Artikel</span><span class="sxs-lookup"><span data-stu-id="c4fb4-135">Updated articles</span></span>
+### <a name="updated-articles"></a><span data-ttu-id="d91fb-135">Aktualisierte Artikel</span><span class="sxs-lookup"><span data-stu-id="d91fb-135">Updated articles</span></span>
 
-- <span data-ttu-id="c4fb4-136"><xref:host-and-deploy/aspnet-core-module> -Umstrukturierung für IIS-Dokumente</span><span class="sxs-lookup"><span data-stu-id="c4fb4-136"><xref:host-and-deploy/aspnet-core-module> - Restructure for IIS docs</span></span>
-- <span data-ttu-id="c4fb4-137"><xref:host-and-deploy/iis/index> -Umstrukturierung für IIS-Dokumente</span><span class="sxs-lookup"><span data-stu-id="c4fb4-137"><xref:host-and-deploy/iis/index> - Restructure for IIS docs</span></span>
+- <span data-ttu-id="d91fb-136"><xref:host-and-deploy/aspnet-core-module> -Umstrukturierung für IIS-Dokumente</span><span class="sxs-lookup"><span data-stu-id="d91fb-136"><xref:host-and-deploy/aspnet-core-module> - Restructure for IIS docs</span></span>
+- <span data-ttu-id="d91fb-137"><xref:host-and-deploy/iis/index> -Umstrukturierung für IIS-Dokumente</span><span class="sxs-lookup"><span data-stu-id="d91fb-137"><xref:host-and-deploy/iis/index> - Restructure for IIS docs</span></span>
 
-## <a name="release-notes"></a><span data-ttu-id="c4fb4-138">Anmerkungen zu dieser Version</span><span class="sxs-lookup"><span data-stu-id="c4fb4-138">Release notes</span></span>
+## <a name="release-notes"></a><span data-ttu-id="d91fb-138">Versionshinweise</span><span class="sxs-lookup"><span data-stu-id="d91fb-138">Release notes</span></span>
 
-### <a name="new-articles"></a><span data-ttu-id="c4fb4-139">Neue Artikel</span><span class="sxs-lookup"><span data-stu-id="c4fb4-139">New articles</span></span>
+### <a name="new-articles"></a><span data-ttu-id="d91fb-139">Neue Artikel</span><span class="sxs-lookup"><span data-stu-id="d91fb-139">New articles</span></span>
 
-- <span data-ttu-id="c4fb4-140"><xref:aspnetcore-5.0> -Doc für neues in ASP.net Core 5,0 hinzufügen</span><span class="sxs-lookup"><span data-stu-id="c4fb4-140"><xref:aspnetcore-5.0> - Add doc for what's new in ASP.NET Core 5.0</span></span>
+- <span data-ttu-id="d91fb-140"><xref:aspnetcore-5.0> -Doc für neues in ASP.net Core 5,0 hinzufügen</span><span class="sxs-lookup"><span data-stu-id="d91fb-140"><xref:aspnetcore-5.0> - Add doc for what's new in ASP.NET Core 5.0</span></span>
 
-## <a name="security"></a><span data-ttu-id="c4fb4-141">Sicherheit</span><span class="sxs-lookup"><span data-stu-id="c4fb4-141">Security</span></span>
+## <a name="security"></a><span data-ttu-id="d91fb-141">Sicherheit</span><span class="sxs-lookup"><span data-stu-id="d91fb-141">Security</span></span>
 
-### <a name="new-articles"></a><span data-ttu-id="c4fb4-142">Neue Artikel</span><span class="sxs-lookup"><span data-stu-id="c4fb4-142">New articles</span></span>
+### <a name="new-articles"></a><span data-ttu-id="d91fb-142">Neue Artikel</span><span class="sxs-lookup"><span data-stu-id="d91fb-142">New articles</span></span>
 
-- <span data-ttu-id="c4fb4-143"><xref:security/authorization/authorizationmiddlewareresulthandler> -Hinzufügen eines Code Ausschnitts, der die Verwendung von authorizationmiddlewareresulthandler veranschaulicht</span><span class="sxs-lookup"><span data-stu-id="c4fb4-143"><xref:security/authorization/authorizationmiddlewareresulthandler> - Add a snippet that shows how to use AuthorizationMiddlewareResultHandler</span></span>
+- <span data-ttu-id="d91fb-143"><xref:security/authorization/authorizationmiddlewareresulthandler> -Hinzufügen eines Code Ausschnitts, der die Verwendung von authorizationmiddlewareresulthandler veranschaulicht</span><span class="sxs-lookup"><span data-stu-id="d91fb-143"><xref:security/authorization/authorizationmiddlewareresulthandler> - Add a snippet that shows how to use AuthorizationMiddlewareResultHandler</span></span>
 
-## <a name="signalr"></a><span data-ttu-id="c4fb4-144">SignalR</span><span class="sxs-lookup"><span data-stu-id="c4fb4-144">SignalR</span></span>
+## <a name="signalr"></a><span data-ttu-id="d91fb-144">SignalR</span><span class="sxs-lookup"><span data-stu-id="d91fb-144">SignalR</span></span>
 
-### <a name="new-articles"></a><span data-ttu-id="c4fb4-145">Neue Artikel</span><span class="sxs-lookup"><span data-stu-id="c4fb4-145">New articles</span></span>
+### <a name="new-articles"></a><span data-ttu-id="d91fb-145">Neue Artikel</span><span class="sxs-lookup"><span data-stu-id="d91fb-145">New articles</span></span>
 
-- <span data-ttu-id="c4fb4-146"><xref:signalr/troubleshoot> -Seite "Problembehandlung" für signalr hinzufügen</span><span class="sxs-lookup"><span data-stu-id="c4fb4-146"><xref:signalr/troubleshoot> - Add troubleshooting page for SignalR</span></span>
+- <span data-ttu-id="d91fb-146"><xref:signalr/troubleshoot> -Seite "Problembehandlung" für signalr hinzufügen</span><span class="sxs-lookup"><span data-stu-id="d91fb-146"><xref:signalr/troubleshoot> - Add troubleshooting page for SignalR</span></span>
 
-### <a name="updated-articles"></a><span data-ttu-id="c4fb4-147">Aktualisierte Artikel</span><span class="sxs-lookup"><span data-stu-id="c4fb4-147">Updated articles</span></span>
+### <a name="updated-articles"></a><span data-ttu-id="d91fb-147">Aktualisierte Artikel</span><span class="sxs-lookup"><span data-stu-id="d91fb-147">Updated articles</span></span>
 
-- <span data-ttu-id="c4fb4-148"><xref:signalr/scale> -Verbessern von signalr nginx-Einstellungen</span><span class="sxs-lookup"><span data-stu-id="c4fb4-148"><xref:signalr/scale> - Improve SignalR Nginx settings</span></span>
+- <span data-ttu-id="d91fb-148"><xref:signalr/scale> -Verbessern von signalr nginx-Einstellungen</span><span class="sxs-lookup"><span data-stu-id="d91fb-148"><xref:signalr/scale> - Improve SignalR Nginx settings</span></span>
 
-## <a name="tutorials"></a><span data-ttu-id="c4fb4-149">Lernprogramme</span><span class="sxs-lookup"><span data-stu-id="c4fb4-149">Tutorials</span></span>
+## <a name="tutorials"></a><span data-ttu-id="d91fb-149">Tutorials</span><span class="sxs-lookup"><span data-stu-id="d91fb-149">Tutorials</span></span>
 
-### <a name="updated-articles"></a><span data-ttu-id="c4fb4-150">Aktualisierte Artikel</span><span class="sxs-lookup"><span data-stu-id="c4fb4-150">Updated articles</span></span>
+### <a name="updated-articles"></a><span data-ttu-id="d91fb-150">Aktualisierte Artikel</span><span class="sxs-lookup"><span data-stu-id="d91fb-150">Updated articles</span></span>
 
-- <span data-ttu-id="c4fb4-151"><xref:tutorials/signalr-blazor-webassembly> -Aktualisieren von blazor Webassembly mit signalr-Tutorial für ASP.net Core 5,0</span><span class="sxs-lookup"><span data-stu-id="c4fb4-151"><xref:tutorials/signalr-blazor-webassembly> - Update Blazor WebAssembly with SignalR tutorial for ASP.NET Core 5.0</span></span>
+- <span data-ttu-id="d91fb-151"><xref:tutorials/signalr-blazor> -Aktualisieren von blazor Webassembly mit signalr-Tutorial für ASP.net Core 5,0</span><span class="sxs-lookup"><span data-stu-id="d91fb-151"><xref:tutorials/signalr-blazor> - Update Blazor WebAssembly with SignalR tutorial for ASP.NET Core 5.0</span></span>
 
-## <a name="community-contributors"></a><span data-ttu-id="c4fb4-152">Mitwirkende an der Community</span><span class="sxs-lookup"><span data-stu-id="c4fb4-152">Community contributors</span></span>
+## <a name="community-contributors"></a><span data-ttu-id="d91fb-152">Beitragende aus der Community</span><span class="sxs-lookup"><span data-stu-id="d91fb-152">Community contributors</span></span>
 
-<span data-ttu-id="c4fb4-153">Die folgenden Personen haben während dieses Zeitraums zu den ASP.net Core docs beigetragen.</span><span class="sxs-lookup"><span data-stu-id="c4fb4-153">The following people contributed to the ASP.NET Core docs during this period.</span></span> <span data-ttu-id="c4fb4-154">Vielen Dank!</span><span class="sxs-lookup"><span data-stu-id="c4fb4-154">Thank you!</span></span> <span data-ttu-id="c4fb4-155">Erfahren Sie, wie Sie mitwirken können, indem Sie den Links unter „Beteiligen“ auf der [Landing Page „Neuerungen“](index.yml) folgen.</span><span class="sxs-lookup"><span data-stu-id="c4fb4-155">Learn how to contribute by following the links under "Get involved" in the [what's new landing page](index.yml).</span></span>
+<span data-ttu-id="d91fb-153">Die folgenden Personen haben während dieses Zeitraums zu den ASP.net Core docs beigetragen.</span><span class="sxs-lookup"><span data-stu-id="d91fb-153">The following people contributed to the ASP.NET Core docs during this period.</span></span> <span data-ttu-id="d91fb-154">Vielen Dank!</span><span class="sxs-lookup"><span data-stu-id="d91fb-154">Thank you!</span></span> <span data-ttu-id="d91fb-155">Erfahren Sie, wie Sie mitwirken können, indem Sie den Links unter „Beteiligen“ auf der [Landing Page „Neuerungen“](index.yml) folgen.</span><span class="sxs-lookup"><span data-stu-id="d91fb-155">Learn how to contribute by following the links under "Get involved" in the [what's new landing page](index.yml).</span></span>
 
-- <span data-ttu-id="c4fb4-156">[daveabrock](https://github.com/daveabrock) -Dave Brock (2)</span><span class="sxs-lookup"><span data-stu-id="c4fb4-156">[daveabrock](https://github.com/daveabrock) - Dave Brock (2)</span></span>
-- <span data-ttu-id="c4fb4-157">[Adrianjsclark](https://github.com/AdrianJSClark) -Adrian Clark (1)</span><span class="sxs-lookup"><span data-stu-id="c4fb4-157">[AdrianJSClark](https://github.com/AdrianJSClark) - Adrian Clark (1)</span></span>
-- <span data-ttu-id="c4fb4-158">[aproulx232](https://github.com/aproulx232) -allen R Proulx (1)</span><span class="sxs-lookup"><span data-stu-id="c4fb4-158">[aproulx232](https://github.com/aproulx232) - Allen R Proulx (1)</span></span>
-- <span data-ttu-id="c4fb4-159">[Bartosz-jarmuz](https://github.com/bartosz-jarmuz) -Bartosz jarmuę (1)</span><span class="sxs-lookup"><span data-stu-id="c4fb4-159">[bartosz-jarmuz](https://github.com/bartosz-jarmuz) - Bartosz Jarmuż (1)</span></span>
-- <span data-ttu-id="c4fb4-160">[Bludator](https://github.com/Bludator) (1)</span><span class="sxs-lookup"><span data-stu-id="c4fb4-160">[Bludator](https://github.com/Bludator) (1)</span></span>
-- <span data-ttu-id="c4fb4-161">[cantsleepnow](https://github.com/cantSleepNow) (1)</span><span class="sxs-lookup"><span data-stu-id="c4fb4-161">[cantSleepNow](https://github.com/cantSleepNow) (1)</span></span>
-- <span data-ttu-id="c4fb4-162">[chassq](https://github.com/chassq) (1)</span><span class="sxs-lookup"><span data-stu-id="c4fb4-162">[chassq](https://github.com/chassq) (1)</span></span>
-- <span data-ttu-id="c4fb4-163">[Finhorsley](https://github.com/FinHorsley) (1)</span><span class="sxs-lookup"><span data-stu-id="c4fb4-163">[FinHorsley](https://github.com/FinHorsley) (1)</span></span>
-- <span data-ttu-id="c4fb4-164">[galakt](https://github.com/galakt) -Vadim galaktionow (1)</span><span class="sxs-lookup"><span data-stu-id="c4fb4-164">[galakt](https://github.com/galakt) - Vadim Galaktionov (1)</span></span>
-- <span data-ttu-id="c4fb4-165">[goenning](https://github.com/goenning) -Guilherme-Oenning (1)</span><span class="sxs-lookup"><span data-stu-id="c4fb4-165">[goenning](https://github.com/goenning) - Guilherme Oenning (1)</span></span>
-- <span data-ttu-id="c4fb4-166">[gurmeetsinghdke](https://github.com/gurmeetsinghdke) -Gurmeet-Singh (1)</span><span class="sxs-lookup"><span data-stu-id="c4fb4-166">[gurmeetsinghdke](https://github.com/gurmeetsinghdke) - Gurmeet Singh (1)</span></span>
-- <span data-ttu-id="c4fb4-167">[Johnyws](https://github.com/JohnyWS) -Johny Woller skovdal (1)</span><span class="sxs-lookup"><span data-stu-id="c4fb4-167">[JohnyWS](https://github.com/JohnyWS) - Johny Woller Skovdal (1)</span></span>
-- <span data-ttu-id="c4fb4-168">[jrstrayhorn](https://github.com/jrstrayhorn) -Jr Strayhorn (1)</span><span class="sxs-lookup"><span data-stu-id="c4fb4-168">[jrstrayhorn](https://github.com/jrstrayhorn) - JR Strayhorn (1)</span></span>
-- <span data-ttu-id="c4fb4-169">[leastofthese23](https://github.com/leastofthese23) (1)</span><span class="sxs-lookup"><span data-stu-id="c4fb4-169">[leastofthese23](https://github.com/leastofthese23) (1)</span></span>
-- <span data-ttu-id="c4fb4-170">[maxalmonte14](https://github.com/maxalmonte14) -Max (1)</span><span class="sxs-lookup"><span data-stu-id="c4fb4-170">[maxalmonte14](https://github.com/maxalmonte14) - Max (1)</span></span>
-- <span data-ttu-id="c4fb4-171">[meziantou](https://github.com/meziantou) -Gérald Barré (1)</span><span class="sxs-lookup"><span data-stu-id="c4fb4-171">[meziantou](https://github.com/meziantou) - Gérald Barré (1)</span></span>
-- <span data-ttu-id="c4fb4-172">[Pandafood](https://github.com/PandaFood) -Jonathan Brorsson (1)</span><span class="sxs-lookup"><span data-stu-id="c4fb4-172">[PandaFood](https://github.com/PandaFood) - Jonathan Brorsson (1)</span></span>
-- <span data-ttu-id="c4fb4-173">[Peer SPRO](https://github.com/pekspro) (1)</span><span class="sxs-lookup"><span data-stu-id="c4fb4-173">[pekspro](https://github.com/pekspro) (1)</span></span>
-- <span data-ttu-id="c4fb4-174">[Programaalisieren](https://github.com/Programazing) -Christopher C. Johnson (1)</span><span class="sxs-lookup"><span data-stu-id="c4fb4-174">[Programazing](https://github.com/Programazing) - Christopher C. Johnson (1)</span></span>
-- <span data-ttu-id="c4fb4-175">[ramtinmovahed](https://github.com/ramtinmovahed) -ramtin Movahed (1)</span><span class="sxs-lookup"><span data-stu-id="c4fb4-175">[ramtinmovahed](https://github.com/ramtinmovahed) - ramtin movahed (1)</span></span>
-- <span data-ttu-id="c4fb4-176">[sreejukg](https://github.com/sreejukg) -sreeju (1)</span><span class="sxs-lookup"><span data-stu-id="c4fb4-176">[sreejukg](https://github.com/sreejukg) - Sreeju (1)</span></span>
-- <span data-ttu-id="c4fb4-177">[tamilselvan719](https://github.com/tamilselvan719) -tamilselvan (1)</span><span class="sxs-lookup"><span data-stu-id="c4fb4-177">[tamilselvan719](https://github.com/tamilselvan719) - Tamilselvan (1)</span></span>
-- <span data-ttu-id="c4fb4-178">[Thomasprioul](https://github.com/ThomasPrioul) -Thomas prioul (1)</span><span class="sxs-lookup"><span data-stu-id="c4fb4-178">[ThomasPrioul](https://github.com/ThomasPrioul) - Thomas Prioul (1)</span></span>
+- <span data-ttu-id="d91fb-156">[daveabrock](https://github.com/daveabrock) -Dave Brock (2)</span><span class="sxs-lookup"><span data-stu-id="d91fb-156">[daveabrock](https://github.com/daveabrock) - Dave Brock (2)</span></span>
+- <span data-ttu-id="d91fb-157">[Adrianjsclark](https://github.com/AdrianJSClark) -Adrian Clark (1)</span><span class="sxs-lookup"><span data-stu-id="d91fb-157">[AdrianJSClark](https://github.com/AdrianJSClark) - Adrian Clark (1)</span></span>
+- <span data-ttu-id="d91fb-158">[aproulx232](https://github.com/aproulx232) -allen R Proulx (1)</span><span class="sxs-lookup"><span data-stu-id="d91fb-158">[aproulx232](https://github.com/aproulx232) - Allen R Proulx (1)</span></span>
+- <span data-ttu-id="d91fb-159">[Bartosz-jarmuz](https://github.com/bartosz-jarmuz) -Bartosz jarmuę (1)</span><span class="sxs-lookup"><span data-stu-id="d91fb-159">[bartosz-jarmuz](https://github.com/bartosz-jarmuz) - Bartosz Jarmuż (1)</span></span>
+- <span data-ttu-id="d91fb-160">[Bludator](https://github.com/Bludator) (1)</span><span class="sxs-lookup"><span data-stu-id="d91fb-160">[Bludator](https://github.com/Bludator) (1)</span></span>
+- <span data-ttu-id="d91fb-161">[cantsleepnow](https://github.com/cantSleepNow) (1)</span><span class="sxs-lookup"><span data-stu-id="d91fb-161">[cantSleepNow](https://github.com/cantSleepNow) (1)</span></span>
+- <span data-ttu-id="d91fb-162">[chassq](https://github.com/chassq) (1)</span><span class="sxs-lookup"><span data-stu-id="d91fb-162">[chassq](https://github.com/chassq) (1)</span></span>
+- <span data-ttu-id="d91fb-163">[Finhorsley](https://github.com/FinHorsley) (1)</span><span class="sxs-lookup"><span data-stu-id="d91fb-163">[FinHorsley](https://github.com/FinHorsley) (1)</span></span>
+- <span data-ttu-id="d91fb-164">[galakt](https://github.com/galakt) -Vadim galaktionow (1)</span><span class="sxs-lookup"><span data-stu-id="d91fb-164">[galakt](https://github.com/galakt) - Vadim Galaktionov (1)</span></span>
+- <span data-ttu-id="d91fb-165">[goenning](https://github.com/goenning) -Guilherme-Oenning (1)</span><span class="sxs-lookup"><span data-stu-id="d91fb-165">[goenning](https://github.com/goenning) - Guilherme Oenning (1)</span></span>
+- <span data-ttu-id="d91fb-166">[gurmeetsinghdke](https://github.com/gurmeetsinghdke) -Gurmeet-Singh (1)</span><span class="sxs-lookup"><span data-stu-id="d91fb-166">[gurmeetsinghdke](https://github.com/gurmeetsinghdke) - Gurmeet Singh (1)</span></span>
+- <span data-ttu-id="d91fb-167">[Johnyws](https://github.com/JohnyWS) -Johny Woller skovdal (1)</span><span class="sxs-lookup"><span data-stu-id="d91fb-167">[JohnyWS](https://github.com/JohnyWS) - Johny Woller Skovdal (1)</span></span>
+- <span data-ttu-id="d91fb-168">[jrstrayhorn](https://github.com/jrstrayhorn) -Jr Strayhorn (1)</span><span class="sxs-lookup"><span data-stu-id="d91fb-168">[jrstrayhorn](https://github.com/jrstrayhorn) - JR Strayhorn (1)</span></span>
+- <span data-ttu-id="d91fb-169">[leastofthese23](https://github.com/leastofthese23) (1)</span><span class="sxs-lookup"><span data-stu-id="d91fb-169">[leastofthese23](https://github.com/leastofthese23) (1)</span></span>
+- <span data-ttu-id="d91fb-170">[maxalmonte14](https://github.com/maxalmonte14) -Max (1)</span><span class="sxs-lookup"><span data-stu-id="d91fb-170">[maxalmonte14](https://github.com/maxalmonte14) - Max (1)</span></span>
+- <span data-ttu-id="d91fb-171">[meziantou](https://github.com/meziantou) -Gérald Barré (1)</span><span class="sxs-lookup"><span data-stu-id="d91fb-171">[meziantou](https://github.com/meziantou) - Gérald Barré (1)</span></span>
+- <span data-ttu-id="d91fb-172">[Pandafood](https://github.com/PandaFood) -Jonathan Brorsson (1)</span><span class="sxs-lookup"><span data-stu-id="d91fb-172">[PandaFood](https://github.com/PandaFood) - Jonathan Brorsson (1)</span></span>
+- <span data-ttu-id="d91fb-173">[Peer SPRO](https://github.com/pekspro) (1)</span><span class="sxs-lookup"><span data-stu-id="d91fb-173">[pekspro](https://github.com/pekspro) (1)</span></span>
+- <span data-ttu-id="d91fb-174">[Programaalisieren](https://github.com/Programazing) -Christopher C. Johnson (1)</span><span class="sxs-lookup"><span data-stu-id="d91fb-174">[Programazing](https://github.com/Programazing) - Christopher C. Johnson (1)</span></span>
+- <span data-ttu-id="d91fb-175">[ramtinmovahed](https://github.com/ramtinmovahed) -ramtin Movahed (1)</span><span class="sxs-lookup"><span data-stu-id="d91fb-175">[ramtinmovahed](https://github.com/ramtinmovahed) - ramtin movahed (1)</span></span>
+- <span data-ttu-id="d91fb-176">[sreejukg](https://github.com/sreejukg) -sreeju (1)</span><span class="sxs-lookup"><span data-stu-id="d91fb-176">[sreejukg](https://github.com/sreejukg) - Sreeju (1)</span></span>
+- <span data-ttu-id="d91fb-177">[tamilselvan719](https://github.com/tamilselvan719) -tamilselvan (1)</span><span class="sxs-lookup"><span data-stu-id="d91fb-177">[tamilselvan719](https://github.com/tamilselvan719) - Tamilselvan (1)</span></span>
+- <span data-ttu-id="d91fb-178">[Thomasprioul](https://github.com/ThomasPrioul) -Thomas prioul (1)</span><span class="sxs-lookup"><span data-stu-id="d91fb-178">[ThomasPrioul](https://github.com/ThomasPrioul) - Thomas Prioul (1)</span></span>
