--- a/aspnetcore/whats-new/2020-09.md
+++ b/aspnetcore/whats-new/2020-09.md
@@ -2,12 +2,12 @@
 title: 'ASP.net Core docs: Neuigkeiten für den 1. September 2020 bis zum 30. September 2020'
 description: Neuerungen in den ASP.net Core docs für den 1. September 2020 bis zum 30. September 2020.
 ms.date: 10/01/2020
-ms.openlocfilehash: 617e5fc6d2e06548498e7e6dfbbaa2efb6326b7c
-ms.sourcegitcommit: c026bf76a0e14a5ee68983519a63574c674e9ff7
+ms.openlocfilehash: e9cd31b3a97ba1a5f28e90d1afbbe6f5ef44be24
+ms.sourcegitcommit: 04ad9cd26fcaa8bd11e261d3661f375f5f343cdc
 ms.translationtype: MT
 ms.contentlocale: de-DE
-ms.lasthandoff: 10/01/2020
-ms.locfileid: "91639138"
+ms.lasthandoff: 02/10/2021
+ms.locfileid: "100106621"
 ---
 # <a name="aspnet-core-docs-whats-new-for-september-1-2020---september-30-2020"></a>ASP.net Core docs: Neuigkeiten für den 1. September 2020 bis zum 30. September 2020
 
@@ -25,7 +25,7 @@ Willkommen bei den Neuerungen in den ASP.net Core docs ab dem 1. September 2020 
 
 - <xref:blazor/components/data-binding> -Hinzufügen von Abschnitten für blazor mehrere verkettete Bindungs-und Zustands Container
 - <xref:blazor/security/webassembly/additional-scenarios> -Blazor WASM Sicherheitsupdates
-- <xref:blazor/fundamentals/additional-scenarios> -Optimieren des Konfigurations Inhalts des blazor-Hostingmodells
+- <xref:blazor/fundamentals/signalr> -Optimieren des Konfigurations Inhalts des blazor-Hostingmodells
 
 ## <a name="data-access"></a>Datenzugriff
 
@@ -62,7 +62,7 @@ Willkommen bei den Neuerungen in den ASP.net Core docs ab dem 1. September 2020 
 
 - <xref:tutorials/first-web-api> -Web-API-Tutorial für ASP.net Core 5,0 aktualisieren
 
-## <a name="community-contributors"></a>Mitwirkende an der Community
+## <a name="community-contributors"></a>Beitragende aus der Community
 
 Die folgenden Personen haben während dieses Zeitraums zu den ASP.net Core docs beigetragen. Vielen Dank! Erfahren Sie, wie Sie mitwirken können, indem Sie den Links unter „Beteiligen“ auf der [Landing Page „Neuerungen“](index.yml) folgen.
 
