--- a/aspnetcore/includes/3.1-SDK.md
+++ b/aspnetcore/includes/3.1-SDK.md
@@ -1,1 +1,21 @@
-[<span data-ttu-id="a1ffb-101">.NET Core 3.1 SDK oder höher</span><span class="sxs-lookup"><span data-stu-id="a1ffb-101">.NET Core 3.1 SDK or later</span></span>](https://dotnet.microsoft.com/download/dotnet-core/3.1)
+---
+no-loc:
+- appsettings.json
+- ASP.NET Core Identity
+- cookie
+- Cookie
+- Blazor
+- Blazor Server
+- Blazor WebAssembly
+- Identity
+- Let's Encrypt
+- Razor
+- SignalR
+ms.openlocfilehash: 660c019956632030620af73da1829947fa7a039b
+ms.sourcegitcommit: a49c47d5a573379effee5c6b6e36f5c302aa756b
+ms.translationtype: HT
+ms.contentlocale: de-DE
+ms.lasthandoff: 02/16/2021
+ms.locfileid: "100536371"
+---
+[<span data-ttu-id="d6ca3-101">.NET Core 3.1 SDK oder höher</span><span class="sxs-lookup"><span data-stu-id="d6ca3-101">.NET Core 3.1 SDK or later</span></span>](https://dotnet.microsoft.com/download/dotnet-core/3.1)
