--- a/aspnetcore/includes/2.1-SDK.md
+++ b/aspnetcore/includes/2.1-SDK.md
@@ -1,1 +1,21 @@
-[<span data-ttu-id="43bc4-101">.NET Core 2.1 SDK oder höher</span><span class="sxs-lookup"><span data-stu-id="43bc4-101">.NET Core 2.1 SDK or later</span></span>](https://dotnet.microsoft.com/download/dotnet-core)
+---
+no-loc:
+- appsettings.json
+- ASP.NET Core Identity
+- cookie
+- Cookie
+- Blazor
+- Blazor Server
+- Blazor WebAssembly
+- Identity
+- Let's Encrypt
+- Razor
+- SignalR
+ms.openlocfilehash: 8fefbccdb5dbe211b1596ef7db9638a5893a885e
+ms.sourcegitcommit: a49c47d5a573379effee5c6b6e36f5c302aa756b
+ms.translationtype: HT
+ms.contentlocale: de-DE
+ms.lasthandoff: 02/16/2021
+ms.locfileid: "100551981"
+---
+[<span data-ttu-id="5eb01-101">.NET Core 2.1 SDK oder höher</span><span class="sxs-lookup"><span data-stu-id="5eb01-101">.NET Core 2.1 SDK or later</span></span>](https://dotnet.microsoft.com/download/dotnet-core)
